# mcp-server-skills

./: .gitignore  GEMINI.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: create_pull_request.md  debug.md  engineer-agent.md  growth-agent.md  infinite-agent.md  jarvis-agent.md  ops-agent.md  pm-agent.md  quality.md  ship-agent.md
.claude/commands/: commit_eng.md  create_pull_request.md  infinite_agent.md  jarvis_agent.md
.claude/hooks/: brain_client.py  brain_inject.py  make_help_inject.py  subagent_stop.py  user_prompt_submit.py
.codex/: AGENTS.md
.codex/prompts/: infinite.md  jarvis.md  jarvis_agent.md
.codex/prompts/manuals/: github_projects_rule.md
.cursor/: hooks.json
.cursor/commands/: engineer_agent.md  growth_agent.md  jarvis_agent.md  pm.md
.cursor/hooks/: brain_inject.py  jarvis_autoloop.py  jarvis_prompt_arm.py  make_help_inject.py
.cursor/rules/: AGENTS.mdc  README.mdc  coding_rule.mdc  root.mdc  tool.mdc
.cursor/rules/manuals/: github_projects_rule.mdc
.github/instructions/: AGENTS.instructions.md  README.instructions.md  _available_rules.instructions.md  coding_rule.instructions.md  root.instructions.md  tool.instructions.md
.github/instructions/manuals/: github_projects_rule.instructions.md
.github/prompts/: commit.prompt.md  create_pull_request.prompt.md  engineer.prompt.md  jarvis_agent.prompt.md  pm_agent.prompt.md
.github/workflows/: auto_assign_pr.yml  lint_python.yml  pull_request_template.md  test_python.yml
.prompts/: AGENTS.md
.prompts/commands/: debug.md  jarvis_agent.md  ops_agent.md  quality.md  ship_agent.md
.prompts/scripts/: pr_checks_wait.sh  pr_review.sh
docs/: embedding-index.md
prompts/: AGENTS.md
src/mcp_brain/: __init__.py  embedding.py  git.py  index_cache.py  models.py  notification.py  search.py  server.py  storage.py
src/mcp_server_skills/: server.py
src/mcp_skills/: __init__.py  embedding.py  git.py  search.py  server.py
src/mcp_skills_server/: models.py  server.py  storage.py
tests/: test_git.py  test_index_cache.py  test_notification.py  test_pycache_prefix.py  test_scope.py  test_search.py  test_server.py
